--- a/projects/ngx3js/src/lib/threejs-library/en/audio/Audio.html
+++ b/projects/ngx3js/src/lib/threejs-library/en/audio/Audio.html
@@ -82,8 +82,7 @@
 	 * @returns Returns the [filters](https://outmindkjg.github.io/ngx3js-doc/#/docs/ngxapi/en/Audio.filters) array.
 
 <h3>[method:Boolean getLoop]()</h3>
-	 * @returns Return the value of [source.loop](https://developer.mozilla.org/en-US/docs/Web/API/AudioBufferSourceNode/loop)
- (whether playback should loop).
+	 * @returns Return the value of [source.loop](https://developer.mozilla.org/en-US/docs/Web/API/AudioBufferSourceNode/loop) (whether playback should loop).
 
 <h3>[method:GainNode getOutput]()</h3>
 	 * @returns Return the [gainNode](https://outmindkjg.github.io/ngx3js-doc/#/docs/ngxapi/en/Audio.gain).
